Edit index.html, script.js and styles.css.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="button" id="size">
-        <button>Size</button>
-    </div>
+    <button id="size">Size</button>
     <div class="container">
 
     </div>
