Add color picker function.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <button id="size">Size</button>
+    <input type="text" id="color-value" value="#ffffff">
+    <input class="colorPicker" type="color" id="colorPicker" value="#0000ff">
     <div class="container">
 
     </div>
